add clean zigbeeservice&zigbeeservice.zip

--- a/zigbeeservice_look/src/Makefile
+++ b/zigbeeservice_look/src/Makefile
@@ -18,12 +18,12 @@ all: $(APP_NAME)
 
 APP_OBJECTS =  zigbeeservice.o ubus.o zha_strategy.o cJSON.o mqtt.o aes.o
 
-$(APP_OBJECTS) : %.o:%.c
+$(APP_OBJECTS) : %.o : %.c
 	$(CC) -c $(MY_CFLAGS) $(MY_INCLUDES) $(DEFS) $< -o $@ 
 
-
 $(APP_NAME): $(APP_OBJECTS) 
-	$(CC) -o $(APP_NAME)  $(MY_CFLAGS) *.o $(MY_LIBS)
+	#$(CC) -o $(APP_NAME)  $(MY_CFLAGS) *.o $(MY_LIBS)    
+	$(CC) -o $@  $(MY_CFLAGS) $^ $(MY_LIBS)             
 
 clean:
 	@rm -f *.o
